Fix: Add code to CSS to fix button size on small devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,9 @@
-/* Basic page styling */
+/* Fixes */
+
+#start-btn {
+   min-width: 60px; /* Fix: Button size on small devices */
+}
+
 #pairs {
     width: 60px; /* Fix: Add fixed width for input */
 }
